// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GenericBanner /> matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-caregiversNearYouBanner-1"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root makeStyles-root-4"
      focusable="false"
      viewBox="0 0 48 48"
    >
      <path
        d="M24.29 38a8.24 8.24 0 01-5.06-1.91 1.3 1.3 0 011.67-2c.34.3 3.46 2.74 6.12.08A1.29 1.29 0 0128.85 36a6.3 6.3 0 01-4.56 2z"
        fill="#213f5f"
      />
      <path
        d="M24 43.76A17.74 17.74 0 1141.74 26 17.76 17.76 0 0124 43.76zm0-32.9A15.16 15.16 0 1039.16 26 15.18 15.18 0 0024 10.86z"
        fill="#213f5f"
      />
      <path
        d="M40.34 27.31h-.24a18.39 18.39 0 01-11.35-7.56c-7.31 7.47-20.08 7.41-20.65 7.42a1.3 1.3 0 010-2.59c.56 0 13.66-.09 19.77-7.8A1.26 1.26 0 0129 16.3a1.3 1.3 0 011 .69c0 .06 3.46 6.43 10.51 7.76a1.28 1.28 0 011 1.5 1.3 1.3 0 01-1.17 1.06zM24.74 10a1.31 1.31 0 01-.47-.09 1.28 1.28 0 01-.74-1.65 5.66 5.66 0 014.87-3.61 1.3 1.3 0 01.1 2.59 3.06 3.06 0 00-2.56 1.9 1.29 1.29 0 01-1.2.86z"
        fill="#213f5f"
      />
      <path
        d="M23.65 9.75a1.3 1.3 0 01-1.22-.86 3.24 3.24 0 00-2.36-2.21 1.29 1.29 0 01.37-2.56A5.82 5.82 0 0124.86 8a1.29 1.29 0 01-.78 1.65 1.31 1.31 0 01-.43.1z"
        fill="#213f5f"
      />
      <circle
        cx="14.92"
        cy="30.86"
        fill="#213f5f"
        r="1.29"
      />
      <circle
        cx="33.08"
        cy="30.86"
        fill="#213f5f"
        r="1.29"
      />
    </svg>
    <p
      class="MuiTypography-root makeStyles-message-2 MuiTypography-body2"
    >
      Nice! 
      <span
        class="makeStyles-placeholder-3"
      >
        77
      </span>
       caregivers are near you.
    </p>
  </div>
</DocumentFragment>
`;

exports[`<GenericBanner /> matches snapshot without "caregiversCount" 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-caregiversNearYouBanner-5"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root makeStyles-root-8"
      focusable="false"
      viewBox="0 0 48 48"
    >
      <path
        d="M24.29 38a8.24 8.24 0 01-5.06-1.91 1.3 1.3 0 011.67-2c.34.3 3.46 2.74 6.12.08A1.29 1.29 0 0128.85 36a6.3 6.3 0 01-4.56 2z"
        fill="#213f5f"
      />
      <path
        d="M24 43.76A17.74 17.74 0 1141.74 26 17.76 17.76 0 0124 43.76zm0-32.9A15.16 15.16 0 1039.16 26 15.18 15.18 0 0024 10.86z"
        fill="#213f5f"
      />
      <path
        d="M40.34 27.31h-.24a18.39 18.39 0 01-11.35-7.56c-7.31 7.47-20.08 7.41-20.65 7.42a1.3 1.3 0 010-2.59c.56 0 13.66-.09 19.77-7.8A1.26 1.26 0 0129 16.3a1.3 1.3 0 011 .69c0 .06 3.46 6.43 10.51 7.76a1.28 1.28 0 011 1.5 1.3 1.3 0 01-1.17 1.06zM24.74 10a1.31 1.31 0 01-.47-.09 1.28 1.28 0 01-.74-1.65 5.66 5.66 0 014.87-3.61 1.3 1.3 0 01.1 2.59 3.06 3.06 0 00-2.56 1.9 1.29 1.29 0 01-1.2.86z"
        fill="#213f5f"
      />
      <path
        d="M23.65 9.75a1.3 1.3 0 01-1.22-.86 3.24 3.24 0 00-2.36-2.21 1.29 1.29 0 01.37-2.56A5.82 5.82 0 0124.86 8a1.29 1.29 0 01-.78 1.65 1.31 1.31 0 01-.43.1z"
        fill="#213f5f"
      />
      <circle
        cx="14.92"
        cy="30.86"
        fill="#213f5f"
        r="1.29"
      />
      <circle
        cx="33.08"
        cy="30.86"
        fill="#213f5f"
        r="1.29"
      />
    </svg>
    <p
      class="MuiTypography-root makeStyles-message-6 MuiTypography-body2"
    >
      Last step!
    </p>
  </div>
</DocumentFragment>
`;
